; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_font/extr_gl1_raster_font.c_gl1_raster_font_setup_viewport.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_font/extr_gl1_raster_font.c_gl1_raster_font_setup_viewport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GL_BLEND = common dso_local global i32 0, align 4
@GL_SRC_ALPHA = common dso_local global i32 0, align 4
@GL_ONE_MINUS_SRC_ALPHA = common dso_local global i32 0, align 4
@GL_TEXTURE_2D = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, %struct.TYPE_3__*, i32)* @gl1_raster_font_setup_viewport to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl1_raster_font_setup_viewport(i32 %0, i32 %1, %struct.TYPE_3__* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @video_driver_set_viewport(i32 %9, i32 %10, i32 %11, i32 0)
  %13 = load i32, i32* @GL_BLEND, align 4
  %14 = call i32 @glEnable(i32 %13)
  %15 = load i32, i32* @GL_SRC_ALPHA, align 4
  %16 = load i32, i32* @GL_ONE_MINUS_SRC_ALPHA, align 4
  %17 = call i32 @glBlendFunc(i32 %15, i32 %16)
  %18 = load i32, i32* @GL_TEXTURE_2D, align 4
  %19 = call i32 @glEnable(i32 %18)
  %20 = load i32, i32* @GL_TEXTURE_2D, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @glBindTexture(i32 %20, i32 %23)
  ret void
}

declare dso_local i32 @video_driver_set_viewport(i32, i32, i32, i32) #1

declare dso_local i32 @glEnable(i32) #1

declare dso_local i32 @glBlendFunc(i32, i32) #1

declare dso_local i32 @glBindTexture(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
